--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -138,11 +138,11 @@ ul .red {
     text-align: center;
   }
   .header {
-    -ms-grid-columns: 1fr 1fr 1fr;
-        grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-columns: 0.5fr 1fr 1fr 1fr 0.5fr;
+        grid-template-columns: 0.5fr 1fr 1fr 1fr 0.5fr;
     -ms-grid-rows: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-        grid-template-areas: "player . monster" ". . .";
+        grid-template-areas: ". player . monster ." ". . . . .";
   }
 }
 /*# sourceMappingURL=main.css.map */
